# modbus-data-logger

./: Dockerfile  README.md  README_init.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
modbus_data_logger/: __init__.py  cli.py  logger.py
tests/: test_logger.py
